[project]
name = "harvia-sauna-mcp"
version = "0.1.0"
description = "MCP server for controlling Harvia Xenio WiFi sauna"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.26.0",
    "aiohttp>=3.9.0",
    "boto3>=1.34.69",
    "pycognito>=2024.2.0",
]

[tool.setuptools.packages.find]
include = ["mcp_server*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
